# taffybar

./: .dockerignore  .envrc  .errors.log.swp  .gitignore  .stan.toml  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING  ChangeLog.md  Dockerfile  Dockerfile.base  INSTALL  LICENSE  PLAN.md  README.md  cabal.project  ci.nix  comp.nix  dbus-hslogger.json  dbus-menu.json  default.nix  environment.nix  errors.log]  flake.nix  gi-wireplumber.json  gtk-scaling-image.json  gtk-sni-tray.json  gtk-strut.cabal  gtk-strut.json  hie.yaml  hie.yml  my-taffybar.cabal.example  nixpkgs.nix  overlay.nix  package.yaml  quick-start.sh  shell.nix  stack-11.22.yaml  stack-7.10.yaml  (+17 more)
.github/ISSUE_TEMPLATE/: ask_for_help.md  bug_report.md  feature_request.md
.github/scripts/: extract-github-release-notes.sh  generate-unreleased-badges.sh  resolve-hackage-release.sh
.github/workflows/: build.yml  flakehub-publish-tagged.yml  hackage-release.yml  haskell-ci.yml  nix.yml  unreleased-badges.yml
.golden/System.Taffybar.Auth-passGet-missing-entry/: golden
app/: AppearanceSnap.hs  AppearanceSnapHyprland.hs  DhallConfig.hs  Main.hs  TestWM.hs
dbus-xml/: org.PulseAudio.Core1.Device.xml  org.PulseAudio.Core1.xml  org.PulseAudio.ServerLookup1.xml  org.freedesktop.NetworkManager.AccessPoint.xml  org.freedesktop.NetworkManager.Connection.Active.xml  org.freedesktop.NetworkManager.xml  org.freedesktop.UPower.Device.xml  org.freedesktop.UPower.xml  org.freedesktop.login1.Manager.xml  org.imalison.ChromeWindowInfo.xml  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
doc/: config.md  contrib.md  custom.md  dhall-config-proposal.md  dhall-config.md  faq.md  install.md  run.md
docs/plans/: 2026-02-07-icon-label-box.md
example/: default.nix  my-taffybar.cabal  stack.yaml  taffybar-wayland.hs  taffybar.hs  xmonad.hs
nix/: .nixpkgs.json  appearance-hyprland-vm-test.nix  filter.nix  haskell-package-overrides.nix  lib-overlay.nix  nixpkgs.nix  overlay.nix  shell.nix
src/: gdk_property_change_wrapper.c
src/System/: .Taffybar.hs.swp  Taffybar.hs
src/System/Information/: Battery.hs  CPU.hs  CPU2.hs  DBusClients.hs  DBusObjects.hs  DiskIO.hs  EWMHDesktopInfo.hs  MPRIS2.hs  Memory.hs  Network.hs  SafeX11.hsc  StreamInfo.hs  Volume.hs  X11DesktopInfo.hs
src/System/Taffybar/: .FreedesktopNotifications.hs.swp  .MPRIS.hs.swp  .MPRIS2.hs.swp  .SimpleClock.hs.swp  Auth.hs  Battery.hs  CPUMonitor.hs  CommandRunner.hs  Context.hs  DBus.hs  DiskIOMonitor.hs  EWMHPixbuf.hs  Example.hs  FSMonitor.hs  FreedesktopNotifications.hs  GtkLibCompat.hs  Hooks.hs  HostName.hs  Hyprland.hs  IconImages.hs  Layout.hs  LayoutSwitcher.hs  LogFormatter.hs  LogLevels.hs  MPRIS.hs  MPRIS2.hs  NetMonitor.hs  Pager.hs  PixbufCompat.hs  SNITray.hs  SimpleClock.hs  SimpleConfig.hs  StrutProperties.hs  Systray.hs  TaffyPager.hs  TextCPUMonitor.hs  TextMemoryMonitor.hs  ToggleMonitor.hs  TransparentWindow.hs  Util.hs  (+12 more)
src/System/Taffybar/Compat/: GtkLibs.hs
src/System/Taffybar/Context/: Backend.hs
src/System/Taffybar/DBus/: Debug.hs  Toggle.hs
src/System/Taffybar/DBus/Client/: ChromeWindowInfo.hs  Login1Manager.hs  MPRIS2.hs  NetworkManager.hs  NetworkManagerAccessPoint.hs  NetworkManagerActiveConnection.hs  Params.hs  PulseAudioCore.hs  PulseAudioDevice.hs  PulseAudioServerLookup.hs  UPower.hs  UPowerDevice.hs  (+1 more)
src/System/Taffybar/Hooks/: PagerHints.hs
src/System/Taffybar/Information/: ASUS.hs  AnthropicUsage.hs  Audio.hs  Backlight.hs  Battery.hs  Bluetooth.hs  Brightness.hs  CPU.hs  CPU2.hs  CPUFrequency.hs  CPUPower.hs  Chrome.hs  ChromeWindowInfo.hs  Crypto.hs  DBusClients.hs  DBusObjects.hs  DiskIO.hs  DiskUsage.hs  EWMHDesktopInfo.hs  Hyprland.hs  Inhibitor.hs  KeyboardState.hs  MPRIS2.hs  Memory.hs  Network.hs  NetworkManager.hs  Nvidia.hs  PowerProfiles.hs  Privacy.hs  PulseAudio.hs  ResourceThread.hs  SafeX11.hs  SafeX11.hsc  ScreenLock.hs  StreamInfo.hs  Systemd.hs  Temperature.hs  Udev.hs  Volume.hs  Wakeup.hs  (+3 more)
src/System/Taffybar/Menu/: DesktopEntry.hs  DesktopEntryCondition.hs  Menu.hs  MenuWidget.hs  XdgMenu.hs
src/System/Taffybar/Support/: PagerHints.hs
src/System/Taffybar/Text/: CPUMonitor.hs  MemoryMonitor.hs
src/System/Taffybar/Util/: ReadByteString.hs
src/System/Taffybar/Widget/: ASUS.hs  AnthropicUsage.hs  Audio.hs  Backlight.hs  Battery.hs  BatteryDonut.hs  BatteryTextIcon.hs  Bluetooth.hs  Brightness.hs  CPUFrequency.hs  CPUMonitor.hs  ChannelWorkspaces.hs  CommandRunner.hs  CoordinatedClock.hs  Crypto.hs  Decorators.hs  DiskIOMonitor.hs  DiskUsage.hs  FSMonitor.hs  FreedesktopNotifications.hs  GitHubNotifications.hs  HyprlandLayout.hs  HyprlandWindows.hs  HyprlandWorkspaces.hs  ImageCommandButton.hs  Inhibitor.hs  KeyboardState.hs  Layout.hs  MPRIS.hs  MPRIS2.hs  NetMonitor.hs  NetworkGraph.hs  NetworkManager.hs  NvidiaTemperature.hs  OpenAIUsage.hs  PowerProfiles.hs  Privacy.hs  PulseAudio.hs  SNIMenu.hs  SNITray.hs  (+16 more)
src/System/Taffybar/Widgets/: .Graph.hs.swp  .Util.hs.swp  .VerticalBar.hs.swp  Battery.hs  CPUMonitor.hs  CommandRunner.hs  DiskIOMonitor.hs  FSMonitor.hs  FreedesktopNotifications.hs  Graph.hs  Icon.hs  Layout.hs  MPRIS.hs  MPRIS2.hs  NetMonitor.hs  PollingBar.hs  PollingGraph.hs  PollingLabel.hs  SNITray.hs  SimpleClock.hs  Systray.hs  Util.hs  VerticalBar.hs  Volume.hs  Weather.hs  Windows.hs  Workspaces.hs
src/System/Taffybar/Window/: FocusedMonitor.hs
src/System/Taffybar/WindowIcon/: Cache.hs
src/System/Taffybar/XdgMenu/: DesktopEntry.hs  DesktopEntryCondition.hs  XdgMenu.hs  XdgMenuWidget.hs
test/: Main.hs  WatcherSpec.hs
test/System/Taffybar/: AuthSpec.hs  ContextSpec.hs  SimpleConfigSpec.hs  SpecUtil.hs
test/System/Taffybar/Test/: UtilSpec.hs  XvfbSpec.hs
test/data/: System.Taffybar.Auth-passGet-get-a-password-with-info.golden  System.Taffybar.Auth-passGet-get-a-password.golden  appearance-test.css
test/lib/: TestLibSpec.hs
test/unit/: DBusMenuSpec.hs  UnitSpec.hs  unit-tests.hs
test/unit/System/Taffybar/: AppearanceHyprlandSpec.hs  AppearanceSpec.hs  AuthSpec.hs  ContextSpec.hs  HooksSpec.hs  SimpleConfigSpec.hs  WidgetPrioritySpec.hs
(+71 files in other folders)
